--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="standard-section">
             <div>1</div>
-            <div>Standard</div>
+            <div class="standard-text">Standard</div>
             <div>2</div>
         </div>
 
@@ -53,20 +53,20 @@
             <div>6</div>
             <div>7</div>
             <div>8</div>
-            <div>9</div>
-            <div>10</div>
-            <div>11</div>
+            <div class="number-btn">9</div>
+            <div class="number-btn">10</div>
+            <div class="number-btn">11</div>
             <div>12</div>
-            <div>13</div>
-            <div>14</div>
-            <div>15</div>
+            <div class="number-btn">13</div>
+            <div class="number-btn">14</div>
+            <div class="number-btn">15</div>
             <div>16</div>
-            <div>17</div>
-            <div>18</div>
-            <div>19</div>
+            <div class="number-btn">17</div>
+            <div class="number-btn">18</div>
+            <div class="number-btn">19</div>
             <div>20</div>
             <div>21</div>
-            <div>22</div>
+            <div class="number-btn">22</div>
             <div>23</div>
             <div>24</div>
         </div>
