--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="right-section">
                 <div>1</div>
                 <div>2</div>
-                <div>3</div>
+                <div class="close-btn">3</div>
             </div>
         </div>
 
