Add chapter 4 code

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <div class="left-section">Calculator</div>
 
             <div class="right-section">
-                <div>1</div>
-                <div>2</div>
-                <div class="close-btn">3</div>
+                <div>–</div>
+                <div>▢</div>
+                <div class="close-btn">✕</div>
             </div>
         </div>
 
@@ -27,9 +27,9 @@
         </div>
 
         <div class="standard-section">
-            <div>1</div>
+            <div class="standard-left-icon"></div>
             <div class="standard-text">Standard</div>
-            <div>2</div>
+            <div class="standard-right-icon"></div>
         </div>
 
         <div class="calculation-section">
@@ -45,30 +45,35 @@
         </div>
 
         <div class="key-section">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div>7</div>
-            <div>8</div>
+            <div>%</div>
+            <div>√x</div>
+            <div>X²</div>
+            <div>¹/x</div>
+
+            <div>CE</div>
+            <div>C</div>
+            <div class="delete-btn"></div>
+            <div>÷</div>
+
+            <div class="number-btn">7</div>
+            <div class="number-btn">8</div>
             <div class="number-btn">9</div>
-            <div class="number-btn">10</div>
-            <div class="number-btn">11</div>
-            <div>12</div>
-            <div class="number-btn">13</div>
-            <div class="number-btn">14</div>
-            <div class="number-btn">15</div>
-            <div>16</div>
-            <div class="number-btn">17</div>
-            <div class="number-btn">18</div>
-            <div class="number-btn">19</div>
-            <div>20</div>
-            <div>21</div>
-            <div class="number-btn">22</div>
-            <div>23</div>
-            <div>24</div>
+            <div>×</div>
+
+            <div class="number-btn">4</div>
+            <div class="number-btn">5</div>
+            <div class="number-btn">6</div>
+            <div>-</div>
+
+            <div class="number-btn">1</div>
+            <div class="number-btn">2</div>
+            <div class="number-btn">3</div>
+            <div>+</div>
+
+            <div>+/–</div>
+            <div class="number-btn">0</div>
+            <div>.</div>
+            <div>=</div>
         </div>
     </body>
 </html>
