Add chapter 5 code

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </div>
 
         <div class="standard-section">
-            <div class="standard-left-icon"></div>
+            <div class="standard-left-btn">
+                <div class="standard-left-icon"></div>
+            </div>
             <div class="standard-text">Standard</div>
             <div class="standard-right-icon"></div>
         </div>
